restore Thrift generated Java Classes

--- a/ChordDHT/src/main/resources/chord.properties
+++ b/ChordDHT/src/main/resources/chord.properties
@@ -1,8 +1,8 @@
-KEYSTORE_PATH=/home/cs557-inst/thrift-0.13.0/lib/java/test/.keystore
+KEYSTORE_PATH=C:/Users/harsh/workspaces/eclipse-workspaces/w3-distributed_systems/libs/test/assignment2/.keystore
 KEYSTORE_PASSWORD=thrift
 KEYSTORE_MANAGER=
 KEYSTORE_TYPE=JKS
-TRUSTSTORE_PATH=/home/cs557-inst/thrift-0.13.0/lib/java/test/.truststore
+TRUSTSTORE_PATH=C:/Users/harsh/workspaces/eclipse-workspaces/w3-distributed_systems/libs/test/assignment2/.truststore
 TRUSTSTORE_PASSWORD=thrift
 TRUSTSTORE_MANAGER=SunX509
 TRUSTSTORE_TYPE=JKS
